--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,9 @@ attrs==23.2.0
     # via
     #   jsonschema
     #   referencing
+    #   visions
 babel==2.14.0
-    # via
-    #   agate
-    #   mkdocs-material
+    # via agate
 backoff==2.2.1
     # via
     #   gql
@@ -49,8 +48,8 @@ click==8.1.7
     #   dagster-webserver
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   dbterd
     #   metricflow
-    #   mkdocs
     #   papermill
     #   typer
     #   uvicorn
@@ -63,11 +62,12 @@ colorama==0.4.6
     #   dbt-core
     #   halo
     #   log-symbols
-    #   mkdocs-material
 coloredlogs==14.0
     # via dagster
 comm==0.2.2
-    # via ipykernel
+    # via
+    #   ipykernel
+    #   ipywidgets
 contourpy==1.2.0
     # via matplotlib
 croniter==2.0.2
@@ -78,6 +78,8 @@ cryptography==42.0.5
     #   noteable-origami
 cycler==0.12.1
     # via matplotlib
+dacite==1.8.1
+    # via ydata-profiling
 dagster==1.6.11
     # via
     #   dagster-dbt
@@ -96,6 +98,8 @@ dagster-pipes==1.6.11
     # via dagster
 dagster-webserver==1.6.11
 dagstermill==0.22.11
+dbt-artifacts-parser==0.5.1
+    # via dbterd
 dbt-core==1.7.9
     # via
     #   dagster-dbt
@@ -111,6 +115,7 @@ dbt-semantic-interfaces==0.4.4
     # via
     #   dbt-core
     #   metricflow
+dbterd==1.13.2
 debugpy==1.8.1
     # via ipykernel
 decorator==5.1.1
@@ -139,8 +144,6 @@ fonttools==4.50.0
     # via matplotlib
 fsspec==2024.2.0
     # via universal-pathlib
-ghp-import==2.1.0
-    # via mkdocs
 gql==3.5.0
     # via dagster-graphql
 graphene==3.3
@@ -170,6 +173,8 @@ halo==0.0.31
     # via metricflow
 holidays==0.45
     # via prophet
+htmlmin==0.1.12
+    # via ydata-profiling
 httpcore==1.0.5
     # via httpx
 httptools==0.6.1
@@ -185,6 +190,10 @@ idna==3.6
     #   httpx
     #   requests
     #   yarl
+imagehash==4.3.1
+    # via
+    #   visions
+    #   ydata-profiling
 importlib-metadata==6.11.0
     # via dbt-semantic-interfaces
 importlib-resources==6.3.2
@@ -194,9 +203,11 @@ ipykernel==6.29.3
 ipython==8.22.2
     # via
     #   ipykernel
+    #   ipywidgets
     #   scrapbook
 ipython-genutils==0.2.0
     # via dagstermill
+ipywidgets==8.1.2
 isodate==0.6.1
     # via
     #   agate
@@ -210,11 +221,12 @@ jinja2==3.1.3
     #   dbt-core
     #   dbt-semantic-interfaces
     #   metricflow
-    #   mkdocs
-    #   mkdocs-material
     #   nbconvert
+    #   ydata-profiling
 joblib==1.3.2
-    # via scikit-learn
+    # via
+    #   phik
+    #   scikit-learn
 jsonschema==4.21.1
     # via
     #   dbt-core
@@ -237,56 +249,50 @@ jupyter-core==5.7.2
     #   nbformat
 jupyterlab-pygments==0.3.0
     # via nbconvert
+jupyterlab-widgets==3.0.10
+    # via ipywidgets
 jwt==1.3.1
     # via noteable-origami
 kiwisolver==1.4.5
     # via matplotlib
 leather==0.4.0
     # via agate
+llvmlite==0.41.1
+    # via numba
 log-symbols==0.0.14
     # via halo
 logbook==1.5.3
     # via dbt-core
 mako==1.3.2
     # via alembic
-markdown==3.6
-    # via
-    #   mkdocs
-    #   mkdocs-material
-    #   pymdown-extensions
 markdown-it-py==3.0.0
     # via rich
 markupsafe==2.1.5
     # via
     #   jinja2
     #   mako
-    #   mkdocs
     #   nbconvert
 mashumaro==3.12
     # via dbt-core
-matplotlib==3.8.3
+matplotlib==3.7.3
     # via
+    #   phik
     #   prophet
     #   seaborn
+    #   wordcloud
+    #   ydata-profiling
 matplotlib-inline==0.1.6
     # via
     #   ipykernel
     #   ipython
 mdurl==0.1.2
     # via markdown-it-py
-mergedeep==1.3.4
-    # via mkdocs
 metricflow==0.205.0
     # via dbt-metricflow
 minimal-snowplow-tracker==0.0.2
     # via dbt-core
 mistune==3.0.2
     # via nbconvert
-mkdocs==1.5.3
-    # via mkdocs-material
-mkdocs-material==9.5.14
-mkdocs-material-extensions==1.3.1
-    # via mkdocs-material
 more-itertools==10.1.0
     # via
     #   dbt-semantic-interfaces
@@ -295,6 +301,10 @@ msgpack==1.0.8
     # via mashumaro
 multidict==6.0.5
     # via yarl
+multimethod==1.11.2
+    # via
+    #   visions
+    #   ydata-profiling
 nbclient==0.10.0
     # via
     #   nbconvert
@@ -315,20 +325,32 @@ networkx==3.2.1
     # via
     #   dagster-dbt
     #   dbt-core
+    #   visions
 noteable-origami==0.0.35
     # via papermill-origami
-numpy==1.26.4
+numba==0.58.1
+    # via ydata-profiling
+numpy==1.25.2
     # via
     #   cmdstanpy
     #   contourpy
+    #   imagehash
     #   matplotlib
+    #   numba
     #   pandas
+    #   patsy
+    #   phik
     #   prophet
     #   pyarrow
+    #   pywavelets
     #   scikit-learn
     #   scipy
     #   seaborn
     #   stanio
+    #   statsmodels
+    #   visions
+    #   wordcloud
+    #   ydata-profiling
 openpyxl==3.1.2
 orjson==3.9.15
     # via
@@ -342,19 +364,21 @@ packaging==24.0
     #   dbt-core
     #   ipykernel
     #   matplotlib
-    #   mkdocs
     #   nbconvert
     #   plotly
-paginate==0.5.6
-    # via mkdocs-material
+    #   statsmodels
 pandas==1.5.3
     # via
     #   cmdstanpy
     #   dagster-duckdb-pandas
     #   metricflow
+    #   phik
     #   prophet
     #   scrapbook
     #   seaborn
+    #   statsmodels
+    #   visions
+    #   ydata-profiling
 pandocfilters==1.5.1
     # via nbconvert
 papermill==2.5.0
@@ -368,19 +392,23 @@ parsedatetime==2.6
 parso==0.8.3
     # via jedi
 pathspec==0.11.2
-    # via
-    #   dbt-core
-    #   mkdocs
+    # via dbt-core
+patsy==0.5.6
+    # via statsmodels
 pendulum==3.0.0
     # via dagster
 pexpect==4.9.0
     # via ipython
+phik==0.12.4
+    # via ydata-profiling
 pillow==10.2.0
-    # via matplotlib
-platformdirs==4.2.0
     # via
-    #   jupyter-core
-    #   mkdocs
+    #   imagehash
+    #   matplotlib
+    #   visions
+    #   wordcloud
+platformdirs==4.2.0
+    # via jupyter-core
 plotly==5.20.0
 prompt-toolkit==3.0.43
     # via ipython
@@ -403,17 +431,16 @@ pycparser==2.21
 pydantic==1.10.14
     # via
     #   dagster
+    #   dbt-artifacts-parser
     #   dbt-semantic-interfaces
     #   metricflow
     #   noteable-origami
+    #   ydata-profiling
 pygments==2.17.2
     # via
     #   ipython
-    #   mkdocs-material
     #   nbconvert
     #   rich
-pymdown-extensions==10.7.1
-    # via mkdocs-material
 pyparsing==3.1.2
     # via matplotlib
 python-dateutil==2.8.2
@@ -421,7 +448,6 @@ python-dateutil==2.8.2
     #   croniter
     #   dagster
     #   dbt-semantic-interfaces
-    #   ghp-import
     #   holidays
     #   jupyter-client
     #   matplotlib
@@ -443,19 +469,17 @@ pytz==2024.1
     #   dagster
     #   dbt-core
     #   pandas
+pywavelets==1.6.0
+    # via imagehash
 pyyaml==6.0.1
     # via
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
     #   metricflow
-    #   mkdocs
     #   papermill
-    #   pymdown-extensions
-    #   pyyaml-env-tag
     #   uvicorn
-pyyaml-env-tag==0.1
-    # via mkdocs
+    #   ydata-profiling
 pyzmq==25.1.2
     # via
     #   ipykernel
@@ -466,20 +490,19 @@ referencing==0.33.0
     # via
     #   jsonschema
     #   jsonschema-specifications
-regex==2023.12.25
-    # via mkdocs-material
 requests==2.31.0
     # via
     #   dagster
     #   dagster-dbt
     #   dagster-graphql
     #   dbt-core
+    #   dbterd
     #   gql
     #   minimal-snowplow-tracker
-    #   mkdocs-material
     #   papermill
     #   requests-toolbelt
     #   update-checker
+    #   ydata-profiling
 requests-toolbelt==1.0.0
     # via gql
 rich==13.7.1
@@ -495,11 +518,17 @@ ruamel-yaml==0.17.40
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
 scikit-learn==1.4.1.post1
-scipy==1.12.0
-    # via scikit-learn
+scipy==1.11.4
+    # via
+    #   imagehash
+    #   phik
+    #   scikit-learn
+    #   statsmodels
+    #   ydata-profiling
 scrapbook==0.5.0
     # via dagstermill
-seaborn==0.13.2
+seaborn==0.12.2
+    # via ydata-profiling
 sending==0.3.0
     # via noteable-origami
 setuptools==69.2.0
@@ -511,6 +540,7 @@ six==1.16.0
     #   halo
     #   isodate
     #   minimal-snowplow-tracker
+    #   patsy
     #   python-dateutil
 sniffio==1.3.1
     # via
@@ -534,6 +564,8 @@ starlette==0.37.2
     # via
     #   dagster-graphql
     #   dagster-webserver
+statsmodels==0.14.1
+    # via ydata-profiling
 structlog==22.3.0
     # via
     #   dagster
@@ -542,6 +574,8 @@ tabulate==0.9.0
     # via
     #   dagster
     #   metricflow
+tangled-up-in-unicode==0.2.0
+    # via visions
 tenacity==8.2.3
     # via
     #   papermill
@@ -570,17 +604,21 @@ tqdm==4.66.2
     #   dagster
     #   papermill
     #   prophet
+    #   ydata-profiling
 traitlets==5.14.2
     # via
     #   comm
     #   ipykernel
     #   ipython
+    #   ipywidgets
     #   jupyter-client
     #   jupyter-core
     #   matplotlib-inline
     #   nbclient
     #   nbconvert
     #   nbformat
+typeguard==4.2.1
+    # via ydata-profiling
 typer==0.9.0
     # via dagster-dbt
 typing-extensions==4.10.0
@@ -593,6 +631,7 @@ typing-extensions==4.10.0
     #   metricflow
     #   pydantic
     #   sqlalchemy
+    #   typeguard
     #   typer
 tzdata==2024.1
     # via pendulum
@@ -608,10 +647,10 @@ uvicorn==0.28.0
     # via dagster-webserver
 uvloop==0.19.0
     # via uvicorn
+visions==0.7.5
+    # via ydata-profiling
 watchdog==4.0.0
-    # via
-    #   dagster
-    #   mkdocs
+    # via dagster
 watchfiles==0.21.0
     # via uvicorn
 wcwidth==0.2.13
@@ -624,7 +663,12 @@ websockets==12.0
     # via
     #   noteable-origami
     #   uvicorn
+widgetsnbextension==4.0.10
+    # via ipywidgets
+wordcloud==1.9.3
+    # via ydata-profiling
 yarl==1.9.4
     # via gql
+ydata-profiling==4.6.0
 zipp==3.18.0
     # via importlib-metadata
