--- a/transformation/transformation_nsw_doe/profiles.yml
+++ b/transformation/transformation_nsw_doe/profiles.yml
@@ -2,7 +2,8 @@ nsw_doe_data_stack_in_a_box_profile:
   outputs:
     dev:
       type: duckdb
-      path: "../../{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV') }}"
+      path: "/home/dave/data-engineering/nsw-doe-data-stack-in-a-box/reports/nsw_doe_data_stack_in_a_box__dev.duckdb"
+      # path: "../../{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV') }}"
       database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV') }}"
       schema: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA__DEV') }}"
       threads: 4
