using erddbt to auto generate docs with dbt's relaitonship test 🦞

--- a/transformation/transformation_nsw_doe/models/dimensional/facts/fct__resource_allocation.yml
+++ b/transformation/transformation_nsw_doe/models/dimensional/facts/fct__resource_allocation.yml
@@ -4,12 +4,7 @@ models:
   - name: fct__resource_allocation
     columns:
       - name: _meta__dim__school__sk
-        # tests:
-        #   - relationships:
-        #       to: ref('dim__school')
-        #       field: _meta__dim__school__sk
-      # - name: School_Code
-      #   tests:
-      #     - relationships:
-      #         to: ref('dim__school')
-      #         field: School_Code
+        tests:
+          - relationships:
+              to: ref('dim__school')
+              field: _meta__dim__school__sk
