--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,8 +34,7 @@
             "accessMode": "Read Only",
             "previewLimit": 50,
             "driver": "DuckDB",
-            "databaseFilePath": "./reports/nsw_doe_data_stack_in_a_box__dev.duckdb"
-        }
+            "databaseFilePath": "./reports/sources/nsw_doe_data_stack_in_a_box__dev/nsw_doe_data_stack_in_a_box__dev.duckdb"        }
     ],
     "files.autoSave": "off"
 }
