--- a/transformation/demo_transformation_jaffle_shop/profiles.yml
+++ b/transformation/demo_transformation_jaffle_shop/profiles.yml
@@ -1,14 +1,14 @@
-nsw_doe_data_stack_in_a_box_profile:
+demo_jaffle_shop_profile:
   outputs:
     dev:
       type: duckdb
-      path: "../../{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_PATH__DEV') }}"
-      database: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV') }}"
-      schema: jaffle_shop
+      path: "{{ env_var('DEMO_JAFFLE_SHOP_DB_PATH_AND_DB__DEV') }}"
+      database: "{{ env_var('DEMO_JAFFLE_SHOP_DB_NAME__DEV') }}"
+      schema: "{{ env_var('DEMO_JAFFLE_SHOP_TARGET_SCHEMA__DEV') }}"
       threads: 4
     prod:
       type: duckdb
-      path: "md:{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}"
-      schema: jaffle_shop
+      path: "md:{{ env_var('DEMO_JAFFLE_SHOP_DB_NAME__PROD') }}"
+      schema: "{{ env_var('DEMO_JAFFLE_SHOP_TARGET_SCHEMA__PROD') }}"
       threads: 4
-  target: "{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX__ENV') }}"
+  target: "{{ env_var('DEMO_JAFFLE_SHOP__ENV') }}"
