--- a/orchestration/workspace.yaml
+++ b/orchestration/workspace.yaml
@@ -13,5 +13,5 @@ load_from:
 #       port: 4003
 #       location_name: "pipeline_nsw_doe"
     - python_module: pipeline_nsw_doe
-    - python_module: demo_pipeline_jaffle_shop
+    # - python_module: demo_pipeline_jaffle_shop
     # - python_module: demo_pipeline_y
