--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ anyio==4.3.0
     #   watchfiles
 asttokens==2.4.1
     # via stack-data
+astunparse==1.6.3
+    # via dlt
 attrs==23.2.0
     # via
     #   jsonschema
@@ -49,13 +51,14 @@ click==8.1.7
     #   dbt-core
     #   dbt-semantic-interfaces
     #   dbterd
+    #   dlt
     #   metricflow
     #   papermill
     #   typer
     #   uvicorn
 cloudpickle==2.2.1
     # via papermill-origami
-cmdstanpy==1.2.1
+cmdstanpy==1.2.2
     # via prophet
 colorama==0.4.6
     # via
@@ -68,9 +71,9 @@ comm==0.2.2
     # via
     #   ipykernel
     #   ipywidgets
-contourpy==1.2.0
+contourpy==1.2.1
     # via matplotlib
-croniter==2.0.2
+croniter==2.0.5
     # via dagster
 cryptography==42.0.5
     # via
@@ -80,33 +83,35 @@ cycler==0.12.1
     # via matplotlib
 dacite==1.8.1
     # via ydata-profiling
-dagster==1.6.11
+dagster==1.7.3
     # via
     #   dagster-dbt
     #   dagster-duckdb
     #   dagster-duckdb-pandas
+    #   dagster-embedded-elt
     #   dagster-graphql
     #   dagster-webserver
     #   dagstermill
-dagster-dbt==0.22.11
-dagster-duckdb==0.22.11
+dagster-dbt==0.23.3
+dagster-duckdb==0.23.3
     # via dagster-duckdb-pandas
-dagster-duckdb-pandas==0.22.11
-dagster-graphql==1.6.11
+dagster-duckdb-pandas==0.23.3
+dagster-embedded-elt==0.23.3
+dagster-graphql==1.7.3
     # via dagster-webserver
-dagster-pipes==1.6.11
+dagster-pipes==1.7.3
     # via dagster
-dagster-webserver==1.6.11
-dagstermill==0.22.11
+dagster-webserver==1.7.3
+dagstermill==0.23.3
 dbt-artifacts-parser==0.5.1
     # via dbterd
-dbt-core==1.7.9
+dbt-core==1.7.13
     # via
     #   dagster-dbt
     #   dbt-duckdb
     #   dbt-metricflow
     #   metricflow
-dbt-duckdb==1.7.3
+dbt-duckdb==1.7.4
     # via dbt-metricflow
 dbt-extractor==0.5.1
     # via dbt-core
@@ -124,7 +129,9 @@ defusedxml==0.7.1
     # via nbconvert
 diff-match-patch==20200713
     # via noteable-origami
-docstring-parser==0.15
+dlt==0.4.3
+    # via dagster-embedded-elt
+docstring-parser==0.16
     # via dagster
 duckdb==0.10.1
     # via
@@ -140,10 +147,18 @@ executing==2.0.1
     # via stack-data
 fastjsonschema==2.19.1
     # via nbformat
-fonttools==4.50.0
+fonttools==4.51.0
     # via matplotlib
-fsspec==2024.2.0
-    # via universal-pathlib
+fsspec==2024.3.1
+    # via
+    #   dlt
+    #   universal-pathlib
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.43
+    # via dlt
+giturlparse==0.12.0
+    # via dlt
 gql==3.5.0
     # via dagster-graphql
 graphene==3.3
@@ -159,11 +174,11 @@ graphviz==0.20.3
     # via metricflow
 greenlet==3.0.3
     # via sqlalchemy
-grpcio==1.62.1
+grpcio==1.62.2
     # via
     #   dagster
     #   grpcio-health-checking
-grpcio-health-checking==1.62.1
+grpcio-health-checking==1.62.2
     # via dagster
 h11==0.14.0
     # via
@@ -171,7 +186,9 @@ h11==0.14.0
     #   uvicorn
 halo==0.0.31
     # via metricflow
-holidays==0.45
+hexbytes==1.2.0
+    # via dlt
+holidays==0.47
     # via prophet
 htmlmin==0.1.12
     # via ydata-profiling
@@ -183,7 +200,9 @@ httpx==0.27.0
     # via noteable-origami
 humanfriendly==10.0
     # via coloredlogs
-idna==3.6
+humanize==4.9.0
+    # via dlt
+idna==3.7
     # via
     #   anyio
     #   dbt-core
@@ -196,11 +215,11 @@ imagehash==4.3.1
     #   ydata-profiling
 importlib-metadata==6.11.0
     # via dbt-semantic-interfaces
-importlib-resources==6.3.2
+importlib-resources==6.4.0
     # via prophet
-ipykernel==6.29.3
+ipykernel==6.29.4
     # via dagstermill
-ipython==8.22.2
+ipython==8.23.0
     # via
     #   ipykernel
     #   ipywidgets
@@ -223,10 +242,12 @@ jinja2==3.1.3
     #   metricflow
     #   nbconvert
     #   ydata-profiling
-joblib==1.3.2
+joblib==1.4.0
     # via
     #   phik
     #   scikit-learn
+jsonpath-ng==1.6.1
+    # via dlt
 jsonschema==4.21.1
     # via
     #   dbt-core
@@ -263,7 +284,9 @@ log-symbols==0.0.14
     # via halo
 logbook==1.5.3
     # via dbt-core
-mako==1.3.2
+makefun==1.15.2
+    # via dlt
+mako==1.3.3
     # via alembic
 markdown-it-py==3.0.0
     # via rich
@@ -281,7 +304,7 @@ matplotlib==3.7.3
     #   seaborn
     #   wordcloud
     #   ydata-profiling
-matplotlib-inline==0.1.6
+matplotlib-inline==0.1.7
     # via
     #   ipykernel
     #   ipython
@@ -311,7 +334,7 @@ nbclient==0.10.0
     #   papermill
 nbconvert==7.16.3
     # via dagstermill
-nbformat==5.10.3
+nbformat==5.10.4
     # via
     #   nbclient
     #   nbconvert
@@ -321,7 +344,7 @@ nest-asyncio==1.6.0
     # via
     #   ipykernel
     #   jupyter-client
-networkx==3.2.1
+networkx==3.3
     # via
     #   dagster-dbt
     #   dbt-core
@@ -352,9 +375,10 @@ numpy==1.25.2
     #   wordcloud
     #   ydata-profiling
 openpyxl==3.1.2
-orjson==3.9.15
+orjson==3.10.1
     # via
     #   dagster-dbt
+    #   dlt
     #   noteable-origami
 packaging==24.0
     # via
@@ -362,6 +386,7 @@ packaging==24.0
     #   dagster-dbt
     #   dagstermill
     #   dbt-core
+    #   dlt
     #   ipykernel
     #   matplotlib
     #   nbconvert
@@ -389,27 +414,33 @@ papermill==2.5.0
 papermill-origami==0.0.30
 parsedatetime==2.6
     # via agate
-parso==0.8.3
+parso==0.8.4
     # via jedi
 pathspec==0.11.2
     # via dbt-core
+pathvalidate==3.2.0
+    # via dlt
 patsy==0.5.6
     # via statsmodels
 pendulum==3.0.0
-    # via dagster
+    # via
+    #   dagster
+    #   dlt
 pexpect==4.9.0
     # via ipython
 phik==0.12.4
     # via ydata-profiling
-pillow==10.2.0
+pillow==10.3.0
     # via
     #   imagehash
     #   matplotlib
     #   visions
     #   wordcloud
-platformdirs==4.2.0
+platformdirs==4.2.1
     # via jupyter-core
-plotly==5.20.0
+plotly==5.21.0
+ply==3.11
+    # via jsonpath-ng
 prompt-toolkit==3.0.43
     # via ipython
 prophet==1.1.5
@@ -424,11 +455,11 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pyarrow==15.0.2
+pyarrow==16.0.0
     # via scrapbook
-pycparser==2.21
+pycparser==2.22
     # via cffi
-pydantic==1.10.14
+pydantic==1.10.15
     # via
     #   dagster
     #   dbt-artifacts-parser
@@ -468,6 +499,7 @@ pytz==2024.1
     #   croniter
     #   dagster
     #   dbt-core
+    #   dlt
     #   pandas
 pywavelets==1.6.0
     # via imagehash
@@ -476,17 +508,18 @@ pyyaml==6.0.1
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   dlt
     #   metricflow
     #   papermill
     #   uvicorn
     #   ydata-profiling
-pyzmq==25.1.2
+pyzmq==26.0.2
     # via
     #   ipykernel
     #   jupyter-client
-rapidfuzz==3.6.2
+rapidfuzz==3.8.1
     # via metricflow
-referencing==0.33.0
+referencing==0.35.0
     # via
     #   jsonschema
     #   jsonschema-specifications
@@ -497,6 +530,7 @@ requests==2.31.0
     #   dagster-graphql
     #   dbt-core
     #   dbterd
+    #   dlt
     #   gql
     #   minimal-snowplow-tracker
     #   papermill
@@ -505,10 +539,13 @@ requests==2.31.0
     #   ydata-profiling
 requests-toolbelt==1.0.0
     # via gql
+requirements-parser==0.9.0
+    # via dlt
 rich==13.7.1
     # via
     #   dagster
     #   dagster-dbt
+    #   typer
 rpds-py==0.18.0
     # via
     #   jsonschema
@@ -517,7 +554,7 @@ ruamel-yaml==0.17.40
     # via metricflow
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
-scikit-learn==1.4.1.post1
+scikit-learn==1.4.2
 scipy==1.11.4
     # via
     #   imagehash
@@ -529,19 +566,34 @@ scrapbook==0.5.0
     # via dagstermill
 seaborn==0.12.2
     # via ydata-profiling
+semver==3.0.2
+    # via dlt
 sending==0.3.0
     # via noteable-origami
-setuptools==69.2.0
-    # via dagster
+setuptools==69.5.1
+    # via
+    #   dagster
+    #   dlt
+shellingham==1.5.4
+    # via typer
+simplejson==3.19.2
+    # via dlt
 six==1.16.0
     # via
     #   asttokens
+    #   astunparse
     #   bleach
     #   halo
     #   isodate
     #   minimal-snowplow-tracker
     #   patsy
     #   python-dateutil
+sling==1.2.6
+    # via dagster-embedded-elt
+sling-linux-amd64==1.2.6
+    # via sling
+smmap==5.0.1
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
@@ -550,21 +602,26 @@ soupsieve==2.5
     # via beautifulsoup4
 spinners==0.0.24
     # via halo
-sqlalchemy==2.0.28
+sqlalchemy==2.0.29
     # via
     #   alembic
     #   dagster
-sqlparse==0.4.4
+    #   dlt
+sqlglot==23.12.1
+    # via dagster-dbt
+sqlglotrs==0.2.0
+    # via sqlglot
+sqlparse==0.5.0
     # via dbt-core
 stack-data==0.6.3
     # via ipython
-stanio==0.3.0
+stanio==0.5.0
     # via cmdstanpy
 starlette==0.37.2
     # via
     #   dagster-graphql
     #   dagster-webserver
-statsmodels==0.14.1
+statsmodels==0.14.2
     # via ydata-profiling
 structlog==22.3.0
     # via
@@ -578,6 +635,7 @@ tangled-up-in-unicode==0.2.0
     # via visions
 tenacity==8.2.3
     # via
+    #   dlt
     #   papermill
     #   plotly
 termcolor==2.4.0
@@ -586,12 +644,14 @@ text-unidecode==1.3
     # via python-slugify
 threadpoolctl==3.4.0
     # via scikit-learn
-time-machine==2.14.0
+time-machine==2.14.1
     # via pendulum
-tinycss2==1.2.1
+tinycss2==1.3.0
     # via nbconvert
 tomli==2.0.1
     # via dagster
+tomlkit==0.12.4
+    # via dlt
 toposort==1.10
     # via dagster
 tornado==6.4
@@ -605,7 +665,7 @@ tqdm==4.66.2
     #   papermill
     #   prophet
     #   ydata-profiling
-traitlets==5.14.2
+traitlets==5.14.3
     # via
     #   comm
     #   ipykernel
@@ -619,14 +679,18 @@ traitlets==5.14.2
     #   nbformat
 typeguard==4.2.1
     # via ydata-profiling
-typer==0.9.0
+typer==0.12.3
     # via dagster-dbt
-typing-extensions==4.10.0
+types-setuptools==69.5.0.20240423
+    # via requirements-parser
+typing-extensions==4.11.0
     # via
     #   alembic
     #   dagster
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   dlt
+    #   ipython
     #   mashumaro
     #   metricflow
     #   pydantic
@@ -634,7 +698,9 @@ typing-extensions==4.10.0
     #   typeguard
     #   typer
 tzdata==2024.1
-    # via pendulum
+    # via
+    #   dlt
+    #   pendulum
 universal-pathlib==0.2.2
     # via dagster
 update-checker==0.18.0
@@ -643,7 +709,7 @@ urllib3==1.26.18
     # via
     #   dbt-core
     #   requests
-uvicorn==0.28.0
+uvicorn==0.29.0
     # via dagster-webserver
 uvloop==0.19.0
     # via uvicorn
@@ -663,6 +729,8 @@ websockets==12.0
     # via
     #   noteable-origami
     #   uvicorn
+wheel==0.43.0
+    # via astunparse
 widgetsnbextension==4.0.10
     # via ipywidgets
 wordcloud==1.9.3
@@ -670,5 +738,5 @@ wordcloud==1.9.3
 yarl==1.9.4
     # via gql
 ydata-profiling==4.6.0
-zipp==3.18.0
+zipp==3.18.1
     # via importlib-metadata
