added google tag manager tracking

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ transformation/demo_transformation_jaffle_shop/_local_queries/*
 
 transformation/transformation_nsw_doe/exports/*.csv
 transformation/transformation_nsw_doe/_local_queries/*.sql
+
+secrets.toml
