--- a/requirements.in
+++ b/requirements.in
@@ -33,4 +33,9 @@ dbterd
 ydata_profiling
 ipywidgets
 
+# dlt
 dagster-embedded-elt
+google-analytics-data
+google-api-python-client
+google-auth-oauthlib
+requests_oauthlib
