--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,8 @@ bitmath==1.3.3.1
     # via noteable-origami
 bleach==6.1.0
     # via nbconvert
+cachetools==5.3.3
+    # via google-auth
 certifi==2024.2.2
     # via
     #   httpcore
@@ -159,6 +161,26 @@ gitpython==3.1.43
     # via dlt
 giturlparse==0.12.0
     # via dlt
+google-analytics-data==0.18.7
+google-api-core==2.18.0
+    # via
+    #   google-analytics-data
+    #   google-api-python-client
+google-api-python-client==2.127.0
+google-auth==2.29.0
+    # via
+    #   google-analytics-data
+    #   google-api-core
+    #   google-api-python-client
+    #   google-auth-httplib2
+    #   google-auth-oauthlib
+google-auth-httplib2==0.2.0
+    # via google-api-python-client
+google-auth-oauthlib==1.2.0
+googleapis-common-protos==1.63.0
+    # via
+    #   google-api-core
+    #   grpcio-status
 gql==3.5.0
     # via dagster-graphql
 graphene==3.3
@@ -177,9 +199,13 @@ greenlet==3.0.3
 grpcio==1.62.2
     # via
     #   dagster
+    #   google-api-core
     #   grpcio-health-checking
+    #   grpcio-status
 grpcio-health-checking==1.62.2
     # via dagster
+grpcio-status==1.62.2
+    # via google-api-core
 h11==0.14.0
     # via
     #   httpcore
@@ -194,6 +220,10 @@ htmlmin==0.1.12
     # via ydata-profiling
 httpcore==1.0.5
     # via httpx
+httplib2==0.22.0
+    # via
+    #   google-api-python-client
+    #   google-auth-httplib2
 httptools==0.6.1
     # via uvicorn
 httpx==0.27.0
@@ -374,6 +404,8 @@ numpy==1.25.2
     #   visions
     #   wordcloud
     #   ydata-profiling
+oauthlib==3.2.2
+    # via requests-oauthlib
 openpyxl==3.1.2
 orjson==3.10.1
     # via
@@ -444,11 +476,20 @@ ply==3.11
 prompt-toolkit==3.0.43
     # via ipython
 prophet==1.1.5
+proto-plus==1.23.0
+    # via
+    #   google-analytics-data
+    #   google-api-core
 protobuf==4.25.3
     # via
     #   dagster
     #   dbt-core
+    #   google-analytics-data
+    #   google-api-core
+    #   googleapis-common-protos
     #   grpcio-health-checking
+    #   grpcio-status
+    #   proto-plus
 psutil==5.9.8
     # via ipykernel
 ptyprocess==0.7.0
@@ -457,6 +498,12 @@ pure-eval==0.2.2
     # via stack-data
 pyarrow==16.0.0
     # via scrapbook
+pyasn1==0.6.0
+    # via
+    #   pyasn1-modules
+    #   rsa
+pyasn1-modules==0.4.0
+    # via google-auth
 pycparser==2.22
     # via cffi
 pydantic==1.10.15
@@ -473,7 +520,9 @@ pygments==2.17.2
     #   nbconvert
     #   rich
 pyparsing==3.1.2
-    # via matplotlib
+    # via
+    #   httplib2
+    #   matplotlib
 python-dateutil==2.8.2
     # via
     #   croniter
@@ -531,12 +580,16 @@ requests==2.31.0
     #   dbt-core
     #   dbterd
     #   dlt
+    #   google-api-core
     #   gql
     #   minimal-snowplow-tracker
     #   papermill
+    #   requests-oauthlib
     #   requests-toolbelt
     #   update-checker
     #   ydata-profiling
+requests-oauthlib==2.0.0
+    # via google-auth-oauthlib
 requests-toolbelt==1.0.0
     # via gql
 requirements-parser==0.9.0
@@ -550,6 +603,8 @@ rpds-py==0.18.0
     # via
     #   jsonschema
     #   referencing
+rsa==4.9
+    # via google-auth
 ruamel-yaml==0.17.40
     # via metricflow
 ruamel-yaml-clib==0.2.8
@@ -705,6 +760,8 @@ universal-pathlib==0.2.2
     # via dagster
 update-checker==0.18.0
     # via metricflow
+uritemplate==4.1.1
+    # via google-api-python-client
 urllib3==1.26.18
     # via
     #   dbt-core
