--- a/transformation/transformation_nsw_doe/models/staging/github/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/github/sources.yml
@@ -1,17 +1,20 @@
 version: 2
 
 sources:
-  - name: raw_github
+  - name: raw
     database: |
       {%- if  target.name == "dev" -%} {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__DEV') }}
       {%- elif target.name == "prod"  -%} {{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_DB_NAME__PROD') }}
       {%- else -%} invalid_database
       {%- endif -%}
-    schema: raw_github
+    schema: raw
     tables:
-      - name: issues
-        # meta:
-        #   dagster:
-        #     asset_key: ["raw","raw_customers_py"] # This metadata specifies the corresponding Dagster asset for this dbt source.
-      - name: issues__comments__reactions
-      - name: issues__reactions
+      - name: raw_github_reactions_issues
+        meta:
+          dagster:
+            asset_key: ["raw_github_reactions_issues"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+      - name: raw_github_reactions_issues_reactions
+      - name: raw_github_reactions_issues_comments_reactions
+      
+      - name: raw_github_reactions_pull_requests
+      - name: raw_github_reactions_pull_requests_reactions
