--- a/transformation/transformation_nsw_doe/models/staging/github/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/github/sources.yml
@@ -13,8 +13,14 @@ sources:
         meta:
           dagster:
             asset_key: ["raw_github_reactions_issues"] # This metadata specifies the corresponding Dagster asset for this dbt source.
-      - name: raw_github_reactions_issues_reactions
-      - name: raw_github_reactions_issues_comments_reactions
+      - name: raw_github_reactions_issues__reactions
+        meta:
+          dagster:
+            asset_key: ["raw_github_reactions_issues"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+      - name: raw_github_reactions_issues__comments__reactions
+        meta:
+          dagster:
+            asset_key: ["raw_github_reactions_issues"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       
-      - name: raw_github_reactions_pull_requests
-      - name: raw_github_reactions_pull_requests_reactions
+      # - name: raw_github_reactions_pull_requests
+      # - name: raw_github_reactions_pull_requests_reactions
