--- a/transformation/transformation_nsw_doe/models/staging/google_analytics/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/google_analytics/sources.yml
@@ -25,3 +25,7 @@ sources:
         meta:
           dagster:
             asset_key: ["raw_google_analytics_sample_analytics_data2"] # This metadata specifies the corresponding Dagster asset for this dbt source.
+      - name: raw_google_analytics_user_metrics_date
+        meta:
+          dagster:
+            asset_key: ["raw_google_analytics_user_metrics_date"] # This metadata specifies the corresponding Dagster asset for this dbt source.
