fixing ruff errors

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -60,10 +60,10 @@
         "GitHub.copilot-labs",
         "innoverio.vscode-dbt-power-user",
         "bastienboutonnet.vscode-dbt",
-        // "eamodio.gitlens", // this dude pops up when start for now will hide
         "Evidence.sqltools-duckdb-driver",
         "Evidence.evidence-vscode",
-        "ms-toolsai.datawrangler"
+        "ms-toolsai.datawrangler",
+        "GitHub.vscode-github-actions"
       ]
     }
   }
