--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-python@v5.0.0
         with:
           python-version: "3.11.x"
+      - name: check python with ruff
+        uses: chartboost/ruff-action@v1
       - name: Setup Node
         uses: actions/setup-node@v4.0.2
         with:
@@ -21,18 +23,17 @@ jobs:
         run: python3 -m pip install uv
       - name: Install Python requirements
         run: uv pip install --system -r requirements.txt
-      - name: Run EL
-        run: python3 el.py -lc
       - name: Run T and Lint
         run: |
           dbt deps
           dbt build
-          sqlfluff lint models --format github-annotation-native
-      - name: Build Evidence
-        env:
-          EVIDENCE_DATABASE: "duckdb"
-          EVIDENCE_DUCKDB_FILENAME: "octocatalog.db"
-        run: |
-          npm install --prefix ./reports
-          npm run sources --prefix ./reports
-          npm run build --prefix ./reports
+      # - name: Lint SQL
+      #   run: sqlfluff lint models --format github-annotation-native
+      # - name: Build Evidence
+      #   env:
+      #     EVIDENCE_DATABASE: "duckdb"
+      #     EVIDENCE_DUCKDB_FILENAME: "octocatalog.db"
+      #   run: |
+      #     npm install --prefix ./reports
+      #     npm run sources --prefix ./reports
+      #     npm run build --prefix ./reports
