--- a/requirements.txt
+++ b/requirements.txt
@@ -206,6 +206,8 @@ importlib-metadata==6.11.0
     # via dbt-semantic-interfaces
 importlib-resources==6.3.2
     # via prophet
+iniconfig==2.0.0
+    # via pytest
 ipykernel==6.29.3
     # via dagstermill
 ipython==8.22.2
@@ -387,6 +389,7 @@ packaging==24.0
     #   nbconvert
     #   pandera
     #   plotly
+    #   pytest
     #   statsmodels
 pandas==1.5.3
     # via
@@ -439,6 +442,8 @@ platformdirs==4.2.0
     #   black
     #   jupyter-core
 plotly==5.20.0
+pluggy==1.5.0
+    # via pytest
 prompt-toolkit==3.0.43
     # via ipython
 prophet==1.1.5
@@ -473,6 +478,7 @@ pygments==2.17.2
     #   rich
 pyparsing==3.1.2
     # via matplotlib
+pytest==8.2.0
 python-dateutil==2.8.2
     # via
     #   croniter
@@ -556,6 +562,7 @@ ruamel-yaml==0.17.40
     # via metricflow
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
+ruff==0.4.3
 scikit-learn==1.4.1.post1
 scipy==1.11.4
     # via
