--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 on:
+  workflow_dispatch: 
   pull_request:
     branches:
       - main
@@ -25,10 +26,14 @@ jobs:
         run: uv pip install --system -r requirements.txt
       - name: Run T and Lint
         run: |
+          cd ./transformation/transformation_nsw_doe
           dbt deps
-          dbt build
-      # - name: Lint SQL
-      #   run: sqlfluff lint models --format github-annotation-native
+          dbt parse
+          mf validate-configs
+      - name: Lint SQL
+        run: sqlfluff lint --format github-annotation-native
+      - name: pytest
+        run: cd ../../orchestration && pytest
       # - name: Build Evidence
       #   env:
       #     EVIDENCE_DATABASE: "duckdb"
