--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ anyio==4.3.0
     #   httpx
     #   starlette
     #   watchfiles
+appdirs==1.4.4
+    # via sqlfluff
 asttokens==2.4.1
     # via stack-data
 attrs==23.2.0
@@ -42,8 +44,13 @@ cffi==1.16.0
     # via
     #   cryptography
     #   dbt-core
+cfgv==3.4.0
+    # via pre-commit
 chardet==5.2.0
-    # via frictionless
+    # via
+    #   diff-cover
+    #   frictionless
+    #   sqlfluff
 charset-normalizer==3.3.2
     # via requests
 click==8.1.7
@@ -56,6 +63,7 @@ click==8.1.7
     #   dbterd
     #   metricflow
     #   papermill
+    #   sqlfluff
     #   typer
     #   uvicorn
 cloudpickle==2.2.1
@@ -67,6 +75,7 @@ colorama==0.4.6
     #   dbt-core
     #   halo
     #   log-symbols
+    #   sqlfluff
     #   typer
 coloredlogs==14.0
     # via dagster
@@ -92,6 +101,7 @@ dagster==1.6.11
     #   dagster-duckdb
     #   dagster-duckdb-pandas
     #   dagster-graphql
+    #   dagster-msteams
     #   dagster-webserver
     #   dagstermill
 dagster-dbt==0.22.11
@@ -100,6 +110,7 @@ dagster-duckdb==0.22.11
 dagster-duckdb-pandas==0.22.11
 dagster-graphql==1.6.11
     # via dagster-webserver
+dagster-msteams==0.22.11
 dagster-pipes==1.6.11
     # via dagster
 dagster-webserver==1.6.11
@@ -112,6 +123,7 @@ dbt-core==1.7.9
     #   dbt-duckdb
     #   dbt-metricflow
     #   metricflow
+    #   sqlfluff-templater-dbt
 dbt-duckdb==1.7.3
     # via dbt-metricflow
 dbt-extractor==0.5.1
@@ -128,8 +140,12 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
+diff-cover==9.0.0
+    # via sqlfluff
 diff-match-patch==20200713
     # via noteable-origami
+distlib==0.3.8
+    # via virtualenv
 docstring-parser==0.15
     # via dagster
 duckdb==0.10.1
@@ -146,6 +162,8 @@ executing==2.0.1
     # via stack-data
 fastjsonschema==2.19.1
     # via nbformat
+filelock==3.14.0
+    # via virtualenv
 fonttools==4.50.0
     # via matplotlib
 frictionless==4.40.8
@@ -191,6 +209,8 @@ httpx==0.27.0
     # via noteable-origami
 humanfriendly==10.0
     # via coloredlogs
+identify==2.5.36
+    # via pre-commit
 idna==3.6
     # via
     #   anyio
@@ -231,10 +251,15 @@ jinja2==3.1.3
     #   dagster-dbt
     #   dbt-core
     #   dbt-semantic-interfaces
+    #   diff-cover
     #   frictionless
+    #   jinja2-simple-tags
     #   metricflow
     #   nbconvert
+    #   sqlfluff
     #   ydata-profiling
+jinja2-simple-tags==0.6.1
+    # via sqlfluff-templater-dbt
 joblib==1.3.2
     # via
     #   phik
@@ -287,6 +312,7 @@ markupsafe==2.1.5
     #   jinja2
     #   mako
     #   nbconvert
+    #   sqlfluff-templater-dbt
 mashumaro==3.12
     # via dbt-core
 matplotlib==3.7.3
@@ -346,6 +372,8 @@ networkx==3.2.1
     #   dagster-dbt
     #   dbt-core
     #   visions
+nodeenv==1.8.0
+    # via pre-commit
 noteable-origami==0.0.35
     # via papermill-origami
 numba==0.58.1
@@ -421,6 +449,7 @@ pathspec==0.11.2
     # via
     #   black
     #   dbt-core
+    #   sqlfluff
 patsy==0.5.6
     # via statsmodels
 pendulum==3.0.0
@@ -441,9 +470,13 @@ platformdirs==4.2.0
     # via
     #   black
     #   jupyter-core
+    #   virtualenv
 plotly==5.20.0
 pluggy==1.5.0
-    # via pytest
+    # via
+    #   diff-cover
+    #   pytest
+pre-commit==3.7.0
 prompt-toolkit==3.0.43
     # via ipython
 prophet==1.1.5
@@ -470,15 +503,18 @@ pydantic==1.10.14
     #   metricflow
     #   noteable-origami
     #   pandera
+    #   sqlfluff-templater-dbt
     #   ydata-profiling
 pygments==2.17.2
     # via
+    #   diff-cover
     #   ipython
     #   nbconvert
     #   rich
 pyparsing==3.1.2
     # via matplotlib
 pytest==8.2.0
+    # via sqlfluff
 python-dateutil==2.8.2
     # via
     #   croniter
@@ -519,6 +555,8 @@ pyyaml==6.0.1
     #   metricflow
     #   pandera
     #   papermill
+    #   pre-commit
+    #   sqlfluff
     #   uvicorn
     #   ydata-profiling
 pyzmq==25.1.2
@@ -531,11 +569,14 @@ referencing==0.33.0
     # via
     #   jsonschema
     #   jsonschema-specifications
+regex==2024.4.28
+    # via sqlfluff
 requests==2.31.0
     # via
     #   dagster
     #   dagster-dbt
     #   dagster-graphql
+    #   dagster-msteams
     #   dbt-core
     #   dbterd
     #   frictionless
@@ -553,13 +594,16 @@ rich==13.7.1
     # via
     #   dagster
     #   dagster-dbt
+    #   sqlfluff-templater-dbt
     #   typer
 rpds-py==0.18.0
     # via
     #   jsonschema
     #   referencing
 ruamel-yaml==0.17.40
-    # via metricflow
+    # via
+    #   metricflow
+    #   sqlfluff-templater-dbt
 ruamel-yaml-clib==0.2.8
     # via ruamel-yaml
 ruff==0.4.3
@@ -578,7 +622,9 @@ seaborn==0.12.2
 sending==0.3.0
     # via noteable-origami
 setuptools==69.2.0
-    # via dagster
+    # via
+    #   dagster
+    #   nodeenv
 shellingham==1.5.4
     # via typer
 simpleeval==0.9.13
@@ -604,6 +650,9 @@ sqlalchemy==2.0.28
     # via
     #   alembic
     #   dagster
+sqlfluff==3.0.6
+    # via sqlfluff-templater-dbt
+sqlfluff-templater-dbt==3.0.6
 sqlparse==0.4.4
     # via dbt-core
 stack-data==0.6.3
@@ -629,6 +678,8 @@ tabulate==0.9.0
     #   metricflow
 tangled-up-in-unicode==0.2.0
     # via visions
+tblib==3.0.0
+    # via sqlfluff
 tenacity==8.2.3
     # via
     #   papermill
@@ -657,6 +708,7 @@ tqdm==4.66.2
     #   dagster
     #   papermill
     #   prophet
+    #   sqlfluff
     #   ydata-profiling
 traitlets==5.14.2
     # via
@@ -688,6 +740,7 @@ typing-extensions==4.10.0
     #   metricflow
     #   pydantic
     #   sqlalchemy
+    #   sqlfluff
     #   typeguard
     #   typer
     #   typing-inspect
@@ -709,6 +762,8 @@ uvloop==0.19.0
     # via uvicorn
 validators==0.28.1
     # via frictionless
+virtualenv==20.26.1
+    # via pre-commit
 visions==0.7.5
     # via ydata-profiling
 watchdog==4.0.0
